# python-flask-boilerplate

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.sh
.github/workflows/: ci.yml
app/: __init__.py  cli.py  database.py
app/config/: __init__.py  config.py  roles.py  tokens.py
app/controllers/: __init__.py  auth_controller.py  user_controller.py
app/docs/: __init__.py  swagger_config.py
app/extensions/: __init__.py
app/middlewares/: __init__.py  auth.py  error_handler.py  rate_limiter.py  security.py  validate.py
app/models/: __init__.py
app/models/mongo/: __init__.py  token.py  user.py
app/models/sql/: __init__.py  token.py  user.py
app/routes/: __init__.py
app/routes/v1/: __init__.py  auth_routes.py  config_routes.py  oauth_routes.py  user_routes.py
app/services/: __init__.py  auth_service.py  email_service.py  firebase_service.py  social_auth_service.py  token_service.py  user_service.py
app/utils/: __init__.py  api_error.py  api_response.py  helpers.py  pagination.py
app/validations/: __init__.py  auth_validation.py  user_validation.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py
tests/integration/: test_auth.py  test_user.py
