[project]
name = "python-flask-boilerplate"
version = "1.0.0"
description = "Production-ready Flask REST API boilerplate with JWT, Firebase, Social Auth, MySQL/PostgreSQL/MongoDB, Swagger UI, RBAC, and DDoS protection"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Asad Iqbal", email = "sandhu@brandsmeetcreators.com" }
]
keywords = [
  "flask", "boilerplate", "rest-api", "jwt", "firebase", "oauth",
  "sqlalchemy", "mongodb", "swagger", "python"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.10"

[project.urls]
Homepage   = "https://github.com/asadiqbal791/python-flask-boilerplate"
Repository = "https://github.com/asadiqbal791/python-flask-boilerplate"
Issues     = "https://github.com/asadiqbal791/python-flask-boilerplate/issues"
